--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "emailjs": "^4.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
   },
@@ -21,10 +22,10 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^6.0.0",
-    "sass-loader": "^12.0.0",
-    "sass-resources-loader": "^2.2.5",
     "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0"
+    "pug-plain-loader": "^1.1.0",
+    "sass-loader": "^12.0.0",
+    "sass-resources-loader": "^2.2.5"
   },
   "eslintConfig": {
     "root": true,
